# pytensor

./: .clang-format  CMakeLists.txt  README.md  pyproject.toml
cmake/: deps-config.cmake  python-config.cmake
examples/: CMakeLists.txt  tiled.cpp  tiled.py
include/tt/core/: bfloat16.hpp  bit.hpp  complex.hpp  concepts.hpp  dtype.hpp  float.hpp  format.hpp  int.hpp  layout.hpp  memory.hpp  offset_policy.hpp  preprocessor.hpp  shared_accessor.hpp  shared_tensor.hpp  slice.hpp  tensor.hpp  tiled_layout.hpp  type_traits.hpp  weak_accessor.hpp
include/tt/core/detail/: delete.hpp
include/tt/operators/: arange.hpp  dot.hpp  empty.hpp  eye.hpp  full.hpp  matmul.hpp  ones.hpp  reshape.hpp  to_layout.hpp  zeros.hpp
include/tt/operators/detail/: delete.hpp  fill.hpp
lib/: tt.cpp
src/: tt.cpp
src/tt/: __init__.py
